  * Moloch >= 1.6.0 requires NodeJS 8.x, 8.12 or later
  * Moloch >= 1.0.0 requires NodeJS 8.x
  * Moloch >= 0.20.0 requires NodeJS 6.x
  * Moloch >= 0.18.1 requires NodeJS 4.x

NOTICE: Restart wiseService before capture when upgrading
NOTICE: Cross-cluster Shortcuts require you to not restart all your viewers at once after upgrading

3.4.1 2022/03/XX
  - capture - new snmp parser of a few fields
  - esproxy - added queries/_mapping to GET allow list


3.4.0 2022/03/09
  - release - node 16.14.0, libpcap 1.10.1
  - release - Configure script deals with / in password better
  - BREAKING - in header auth mode userAuthIps allows only localhost by default
  - wise - fix issues with redis source
  - wise - threatstream in sqlite3 mode opens in readonly now
  - wise - support -o section.var=value command line option
  - wise - improve json parsing to handle non arrays when expecting an array
  - wise - didn't always encoding number fields correctly
  - db.pl - added a repair command that will fix some common issues
  - viewer - reading packets from S3 failed
  - viewer - increase speed when searching match fields
  - viewer - fixed lastUsed when in digest auth
  - viewer/wise - new userAuthIps setting that has which ips auth requests can
                  come from. header mode - default localhost, other - default all ips
  - viewer - record which node is cron node and warn if not found
  - viewer - allow floating point numbers for disk watermarks
  - capture - switch from deflate to gzip posting to ES, lower min gzip size to 860
  - capture - ietf quic improvements
  - esproxy - can now create a [tee] section that will duplicate all ES calls,
              but ignore results
  - tests - Add --elasticsearch option which is actually used correctly

3.3.1 2022/01/26
  - viewer - fix displaying large packets or xored packets not always working
  - capture - refactor curl code based on recommendations
  - capture - only allow 50 packets per ip4 frag