@@ -25,6 +25,8 @@ NOTICE: Cross-cluster Shortcuts require you to not restart all your viewers at o
 
 3.4.1 2022/03/XX
   - capture - new snmp parser of a few fields
+  - capture - rules can have numeric ranges
+  - db.pl - stop using history type name
   - esproxy - added queries/_mapping to GET allow list
 
 
